# OpenViking

./: .dockerignore  .gitignore  .impeccable.md  .ingest_record.json  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  CONTRIBUTING_JA.md  Caddyfile  Cargo.toml  DOLT_REMOTE.md  Dockerfile  Dockerfile.liclaw  Echo2.md  GOOGLE_EMBEDDING_TEST_GUIDE.md  INSTALL.md  INSTALL_ADVANCED.md  MANIFEST.in  Makefile  README.md  README.zh.md  README_CN.md  README_JA.md  RELEASE.md  SAAS_DEPLOYMENT.md  SECURITY.md  SECURITY_FINDINGS.md  agents.json  agfs.config.local.yaml  commit.md  config.ts  dag.json  docker-compose.infra.yml  docker-compose.saas.yml  docker-compose.yml  ephemeral.md  eval_results.json  filter_err_csv.py  flake.nix  iclr2026.md  (+30 more)
bot/: .gitignore  README.md  README_CN.md  package-lock.json  package.json  pyproject.toml
bot/.github/workflows/: release-first.yml
bot/bridge/src/: whatsapp.ts
bot/demo/werewolf/: README.md  start_werewolf_demo.py  werewolfUI.html  werewolf_server.py
bot/deploy/: Dockerfile
bot/deploy/docker/: Dockerfile  README.md  deploy.sh
bot/deploy/vke/: README.md  deploy.sh  vke_deploy.example.yaml
bot/docker/: .acr_env.example  DEPLOY.md  Dockerfile  README.md  config.example.json  init-config.sh  push-to-acr.sh  run-local.sh  stop-local.sh
bot/docs/: CHANNEL.md  rfc-openviking-cli-ov-chat.md  vikingbot-feedback-observability-design.md  vikingbot-feedback-observability-validation.md  vikingbot-openviking-context-plan.md  vikingbot-phase2-feedback-validation-with-openviking-server.md  vikingbot-phase3-outcome-validation-with-openviking-server.md  vikingbot-real-user-metrics-cases.md
bot/eval/locomo/: import_to_ov.py  judge.py  locomo10.json  run_eval.py  stat_judge_result.py
bot/eval/skillsbench/: skill_bench_eval.py
bot/scripts/: README_CLEANUP.md  clean_vikingbot.py  core_agent_lines.sh  install_local_openclaw_plugin.sh  restart_openviking_server.sh  start_vikingbot_in_ecs.sh  test_agents.py  test_import_fix.py  test_lazy_init.py  test_precreate_sandbox.py  test_restart_openviking_server.sh  test_sandbox_log.py  test_skills_copy.py
bot/specs/: 02-agent.md  04-channels.md
bot/tests/: TEST_REPORT.md  conftest.py  example.py  test.md  test_agent_loop_outcome.py  test_channel_delivery_metadata.py  test_channel_sender_name.py  test_channel_status.py  test_chat_commands.py  test_chat_functionality.py  test_compile.py  test_corrupt_state_safety.py  test_experience_constraints.py  test_feedback_stats.py  test_feishu_feedback.py  test_feishu_ws_lifecycle.py  test_gateway_startup_security.py  test_image_format.py  test_image_tool_sandbox.py  test_minimax_provider.py  test_openapi_auth.py  test_openviking_api_key_type.py  test_outcome_evaluator.py  test_per_peer_workspace.py  test_sandbox_startup.py  test_subagent_iteration_limit.py  test_subagent_skills_context.py  test_telegram_sender_id.py  test_vlm_agent_config_inheritance.py  test_web_fetch_network_guard.py  test_websearch.py  test_werewolf_server_security.py
bot/tests/fixtures/: __init__.py  configs.py  messages.py  sessions.py
bot/tests/integration/: __init__.py  test_agent_e2e.py
bot/tests/tester/: README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  test_vikingbot.py
bot/tests/unit/: __init__.py
bot/vikingbot/: __init__.py  __main__.py
bot/vikingbot/agent/: __init__.py  context.py  experience_constraints.py  loop.py  memory.py  planner.py  skills.py  subagent.py
bot/vikingbot/bus/: events.py  queue.py
bot/vikingbot/channels/: base.py  chat.py  dingtalk.py  discord.py  email.py  feishu.py  feishu_test.py  manager.py  mochat.py  openapi.py  openapi_models.py  qq.py  single_turn.py  slack.py  telegram.py  utils.py  whatsapp.py
bot/vikingbot/cli/: commands.py  test_commands.py  werewolf_game.py
bot/vikingbot/compile/: __init__.py  models.py  renderer.py  router.py  service.py  store.py
bot/vikingbot/config/: __init__.py  loader.py  schema.py
bot/vikingbot/console/: console_gradio_simple.py  server.py  web_console.py
bot/vikingbot/cron/: service.py  types.py
bot/vikingbot/heartbeat/: service.py
bot/vikingbot/hooks/: base.py  manager.py
bot/vikingbot/integrations/: langfuse.py
bot/vikingbot/observability/: feedback_stats.py  outcome.py
bot/vikingbot/openviking_mount/: __init__.py  fuse_finder.py  fuse_proxy.py  fuse_simple.py  fuse_simple_debug.py  manager.py  mount.py  ov_server.py  session_integration.py  session_state.py  user_apikey_manager.py  viking_fuse.py
bot/vikingbot/providers/: base.py  litellm_provider.py  openai_compatible_provider.py  registry.py  transcription.py  vlm_adapter.py
bot/vikingbot/sandbox/: __init__.py  base.py  manager.py
bot/vikingbot/session/: __init__.py  manager.py
bot/vikingbot/tests/: test_planner.py
bot/vikingbot/tui/: app.py  state.py
bot/vikingbot/utils/: __init__.py  helpers.py  image_format.py  langfuse_decorator.py  openviking_routing.py  peer_id.py  tracing.py
bot/workspace/: TOOLS.md
crates/openviking-cli/: Cargo.toml  install.sh
crates/openviking-cli/src/: client.rs  config.rs  main.rs  output.rs
crates/ragfs-python/: Cargo.toml  pyproject.toml
crates/ragfs-python/src/: git.rs  lib.rs
examples/memex/: README.md  cli.py  client.py  config.py  pyproject.toml
examples/memex/commands/: stats.py
examples/memex/rag/: recipe.py
nix/openviking-env/: pyproject.toml
sdk/python/: README.md  README_CN.md  pyproject.toml
sdk/python/openviking_sdk/: __init__.py  _utils.py  client.py  config.py  errors.py  uploads.py
sdk/python/tests/: conftest.py  test_async_client_behaviors.py  test_async_utils.py  test_client_config.py  test_error_mapping.py  test_legacy_shims.py  test_main_package_exports.py  test_ovcli_config_compat.py  test_packaging_imports.py  test_uploads.py  test_utils.py
src/: CMakeLists.txt  abi3_engine_backend.cpp  abi3_x86_caps.cpp  cpu_feature_probe.cpp  py_accessors.h  pybind11_interface.cpp
src/index/: common_structs.h  index_engine.cpp  index_engine.h  index_manager.h
src/index/detail/: index_manager_impl.cpp  (+1 more)
src/store/: bytes_row.cpp  bytes_row.h
(+4146 files in other folders)
