[workspace]
members = [
    "crates/ov_cli",
    "crates/ragfs",
    "crates/ragfs-cache-mooncake",
    "crates/ragfs-cache-redis",
    "crates/ragfs-cache-yuanrong",
    "crates/ragfs-cache-yuanrong-sys",
    "crates/ragfs-python",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.release.package.ragfs]
codegen-units = 1
