[package]
name = "openviking-cli"
version = "0.1.1"
edition = "2021"
authors = ["OpenViking Contributors"]
description = "CLI client for OpenViking - Testing release build"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
comfy-table = "7.1"
colored = "2.1"
dirs = "5.0"
anyhow = "1.0"
mime_guess = "2.0"
thiserror = "1.0"
tabled = "0.16"
